# skap

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README-docker.md  README.md  build.zig  ca.key  ca.pem  docker-compose.yml  init-db.sql  key  plan
src/: binner.rs  bitui.rs  client.rs  database.rs  main.rs  postgres.rs  protocol.rs  redis.rs  server.rs  tui.rs
