[package]
name = "skap"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.0"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
blake3 = { version = "1.5.4", features = ["serde"] }
bytes = "1.8.0"
chacha20poly1305 = "0.10.1"
cli-clipboard = "0.4.0"
crossterm = "0.28.1"
crystals-dilithium = "1.0.0"
data-encoding = "2.7.0"
dotenv = "0.15.0"
futures = "0.3.31"
hmac = "0.12.1"
lazy_static = "1.5.0"
otp-std = { version = "0.1.0", features = ["sha2"] }
postgres-protocol = "0.6.7"
postgres-types = { version = "0.2.8", features = ["derive", "serde-1"] }
pqc_kyber = { version = "0.7.1", features = ["kyber1024", "std"] }
rand = "0.8.5"
ratatui = "0.29.0"
reqwest = "0.12.9"
ring = "0.17.8"
rustls = { version = "0.23.21", features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-rustcrypto = "0.0.2-alpha"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.11.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sharks = "0.5.0"
surrealdb = "2.1.2"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1"] }
tokio-postgres-tls = "0.12.0"
totp-rs = { version = "5.6.0", features = ["otpauth", "serde_support"] }
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4", "serde", "fast-rng"] }
warp = "0.3.7"
